<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/activity2_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/img_view"
        android:text="@string/a_Congratulations"
        />

    <ImageView
        android:id="@+id/img_view"
        android:layout_marginTop="16dp"
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:layout_above="@id/button_next"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="count_up"
        android:text="@string/more_more"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>